
	* musicbrainz, codesearch, rpmsearch: Fixed URLs, options and
	  tests. The sites have all changed significantly which means
	  both new options and no-longer-supported options.
	  codesearch has gone all ajaxy, so I've implemented the options
	  via the search string, e.g. adding " package:foo".
	  Disabled codesearch.test, as it now needs javascript.
	* Tweak debian packaging.

2011-06-13  Ian Beckwith  <ianb@erislabs.net>

	* w3link: fixed URLs.

2011-06-10  Ian Beckwith  <ianb@erislabs.net>

	* Fixed ctan.
	  Option -doc has been replaced by -id.
	  Options are no longer mutually exclusive,
	  you can now do (eg) ctan -d -i -n texlive.

2011-06-09  Ian Beckwith  <ianb@erislabs.net>

	* fixed tests: debwiki, ntrs, wayback.

2011-06-07  Ian Beckwith  <ianb@erislabs.net>

	* Default to surfraw_graphical_remote=no,
	  as chromium doesn't support "-remote openURL".

2011-05-31  Jason Ryan  <jasonwryan@gmail.com>

	* Add options to archpkg.

2011-05-12  Sara Fauzia  <sara@archlinux.us>

	* Fix archpkg URL.

2011-05-12  Ian Beckwith  <ianb@erislabs.net>

	* surfraw.IN:
	  + if elvi doesn't exist, send usage to stderr not stdout.
	  + bookmark names: do exact match not substring match.
	* Added tests for archwiki, deli & stack.
	* README:
	  + added INTEGRATION section on uzbl and pentadactyl.
	  + upcased section headings for clarity.

2011-05-12  Jason Ryan  <jasonwryan@gmail.com>

	* New elvi:
	  + archwiki: search the arch wiki.
	  + deli: search delicious.com.
	  + stack: search stackoverflow.com and friends.

2011-03-21  Ian Beckwith  <ianb@erislabs.net>

	* google: Added -safe=default|off|moderate|strict
	  option for Safe Search.

2011-03-21  Ivy Foster  <joyfulgirl@archlinux.us>

	* Added Google Translate to elvi/translate.

2011-03-03  Ian Beckwith  <ianb@erislabs.net>

	* opensearch: new option -r, uses redirector at
	  http://erislabs.net/ianb/webtools/opensearch/ instead of calling
	  opensearch-discover and opensearch-genquery. -r is selected