@@ -198,7 +198,6 @@ duckduckgo      -- Securely search the web using duckduckgo (www.duckduckgo.com)
 ebay            -- Search the Ebay auction site
 etym            -- Look up word origins at www.etymonline.com
 excite          -- Search on Excite (www.excite.com)
-filesearching   -- Search files on filesearching (www.filesearching.com)
 finkpkg         -- Search Fink packages (pdb.finkproject.org)
 foldoc          -- The Free On-Line Dictionary Of Computing (foldoc.org)
 freebsd         -- Search FreeBSD related information (www.freebsd.org)
