@@ -1,23 +1,0 @@
-#!/bin/sh
-# $Id$
-# elvis: filesearching	-- Search files on filesearching (www.filesearching.com)
-. surfraw || exit 1
-
-w3_usage_hook () {
-    cat <<EOF
-Usage: $w3_argv0 [options] [search words]...
-Description:
-  Surfraw search files on www.filesearching.com (www.filesearching.com)
-EOF
-    w3_global_usage
-}
-
-w3_config
-w3_parse_args "$@"
-# w3_args now contains a list of arguments
-if test -z "$w3_args"; then
-    w3_browse_url "http://"www.filesearching.com/advanced/""
-else
-    escaped_args=`w3_url_of_arg $w3_args`
-    w3_browse_url "http://www.filesearching.com/cgi-bin/s?q=${escaped_args}&t=f&d=&l=en&x=22&y=15"
-fi
