@@ -6,7 +6,10 @@
 	  codesearch has gone all ajaxy, so I've implemented the options
 	  via the search string, e.g. adding " package:foo".
 	  Disabled codesearch.test, as it now needs javascript.
-	* Tweak debian packaging.
+	* Removed filesearching elvi, it now requires a 'Referer:' header
+	  to work. There is no browser-portable way to specify a
+	  'Refer[r]er:' header, plus we should probably take it as a hint.
+	* Tweaked debian packaging.
 
 2011-06-13  Ian Beckwith  <ianb@erislabs.net>
 
